# rotterdam-appointment-checker

./: .dockerignore  .gitignore  Dockerfile  RAILWAY_SETUP.md  README.md  check_appointments.py  pyproject.toml  railway.toml  requirements.txt  run_scheduler.py
.github/workflows/: check-appointments.yml
