[project]
name = "rotterdam-appointment-checker"
version = "1.0.0"
description = "Automated checker for Rotterdam naturalization appointment slots"
requires-python = ">=3.11"
dependencies = [
    "selenium>=4.15.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

